--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,12 +29,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.0
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
       with:
-        name: NoBlackSky
-        path: target/*.jar
+        path: /home/runner/work/NoBlackSky/NoBlackSky/target/
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
